--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jimp": "^0.14.0",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "md5": "^2.2.1",
